# bracketeering

./: .gitignore  pyproject.toml
test/: test_bracket_math.py
