[tool.poetry]
name = "bracketeering"
version = "0.1.0"
description = "Library to calculate withholdings based on tiered brackets"
readme = "README.md"
homepage = "https://github.com/austin1howard/bracketeering"
repository = "https://github.com/austin1howard/bracketeering"
authors = ["Austin Howard <austin@ahoward.io>"]
license = "MIT"
keywords = [
    "taxes",
]
classifiers = [
    "Intended Audience :: Developers"
]

[tool.poetry.dependencies]
python = "^3.9"
clearcut = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
